--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
             <artifactId>hibernate-validator</artifactId>
 
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
 
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
